# The_Small_Map

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a5b6c7d8e9f0_poi_photo_processed.py  b6c7d8e9f0a1_poi_confirmations.py  bd261a97346e_initial_poi_table.py  c1a2b3d4e5f6_phase1_poi_columns.py  c7d8e9f0a1b2_poi_soft_delete_audit.py  d2b3c4e5f6a7_users_table.py  d8e9f0a1b2c3_reports_and_notifications.py  e3c4d5f6a7b8_poi_verification_status.py  e9f0a1b2c3d4_reputation_events.py  f4d5e6a7b8c9_photo_uploads.py
backend/app/: config.py  db.py  deps.py  main.py
backend/app/core/: geo.py  jwt_tokens.py  kakao_oauth.py  logging.py  photo_blur.py  r2.py  rate_limit.py  request_logging.py  security_headers.py  security_startup.py  staleness.py  trust.py
backend/app/importers/: SOURCES.md  base.py  seoul_public_toilets.py  seoul_smoking_areas.py
backend/app/jobs/: importer_scheduler.py  photo_blur_task.py  photo_cleanup.py  report_expiry.py
backend/app/models/: __init__.py  notification.py  photo_upload.py  poi.py  poi_confirmation.py  poi_removal_proposal.py  report.py  reputation_event.py  user.py
backend/app/routers/: admin.py  auth.py  me.py  notifications.py  pois.py  reports.py  uploads.py
backend/app/schemas/: poi.py  poi_attributes.py  report.py  upload.py  user.py
backend/app/services/: confirmation_service.py  moderation_service.py  (+7 more)
backend/scripts/: run_importers.py  seed_dev_data.py
backend/tests/: conftest.py
(+128 files in other folders)
